Fixed spacing on bottom image

--- a/css/customcodeup.css
+++ b/css/customcodeup.css
@@ -124,23 +124,23 @@ h5 {
 }
 
 .bottom-row-margin {
+    margin-top: .5em;
     margin-bottom: 50px;
 }
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) {
+@media (min-width:@screen-sm-min) {
 
 }
 
-
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) {
+@media (min-width:@screen-md-min) {
 
 }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) {
+@media (min-width:@screen-lg-min) {
 
 }
